# adventofcode2023

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  README.md  mypy.ini  pyproject.toml
adventofcode2023/day1/: day1.py  input.py  input_sample.py  input_text.py  main.py  number_word_converter.py  workings.py
adventofcode2023/day2/: day2.py  extract_data_from_input.py  input_text.py
tests/: test_day1.py
