[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Michael Anderson <michael.anderson@banksearch-consultancy.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
skips = ["B404", "B603"]
