[tool.poetry]
name = "adventofcode2023"
version = "0.1.0"
description = ""
authors = ["Michael Anderson <michael.anderson@banksearch-consultancy.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
word2number = "^1.1"
pytest = "^7.4.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
skips = ["B101"]
